# quest

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  install.ps1  install.sh
.cargo/: audit.toml
.claude/skills/: pr-validation.md
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: BALANCING.md  DECISIONS.md  REFACTOR_OPPORTUNITIES.md  ROADMAP.md  SIMULATOR_ANALYSIS.md  STAT_SYSTEM.md  SYSTEM_DESIGN.md  TEST_COVERAGE_ANALYSIS.md  balancing.md  challenge-minigames.md  decisions.md  infrastructure.md  secondary-systems.md  system-design.md
docs/analysis/: combat-balance-analysis.md
docs/design/: balance-tuning-architecture.md  balance-tuning-values.md  challenge-minigames.md  chess-puzzle-architecture.md  chess-puzzle.md  combat-balance-architecture.md  combat-balance-core.md  combat-balance-prestige.md  core-systems.md  decoupled-timers-architecture.md  decoupled-timers-game-design.md  decoupled-timers-ux.md  dino-run.md  (+13 more)
examples/: effects_demo.rs  sprite_demo.rs
scripts/: README.md  ci-checks.sh  coverage.sh
src/: attributes.rs  build_info.rs  challenge_menu.rs  character_manager.rs  chess.rs  chess_logic.rs  combat.rs  combat_logic.rs  constants.rs  debug_menu.rs  derived_stats.rs  dungeon.rs  dungeon_generation.rs  dungeon_logic.rs  equipment.rs  fishing.rs  fishing_generation.rs  fishing_logic.rs  game_logic.rs  game_state.rs  gomoku.rs  gomoku_logic.rs  input.rs  item_drops.rs  item_generation.rs  item_names.rs  item_scoring.rs  items.rs  lib.rs  main.rs  minesweeper_logic.rs  morris.rs  morris_logic.rs  prestige.rs  rune.rs  rune_logic.rs  save_manager.rs  tick_events.rs  updater.rs
tests/: achievement_integration_test.rs  behavior_lock_fishing_dungeon_test.rs  chess_integration_test.rs  dungeon_completion_test.rs  enhancement_test.rs  fishing_integration_test.rs  game_loop_orchestration_test.rs  game_loop_test.rs  game_tick_behavior_test.rs  game_tick_supplemental_test.rs  item_pipeline_test.rs  prestige_cycle_test.rs  storm_forge_test.rs  tick_integration_test.rs  tick_stage_coverage_test.rs  zone_progression_test.rs
web/: index.html
(+195 files in other folders)
