[package]
name = "quest"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chess-engine = "0.1"
chrono = "0.4"
rand = "0.8"
directories = "5.0"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
ureq = { version = "2.9", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
rand_chacha = "0.3"

[dev-dependencies]

# rand_chacha moved to [dependencies] for the simulator binary

[build-dependencies]
chrono = "0.4"

[lints.rust]
unused_imports = "deny"
