[package]
name = "quest"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chess-engine = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.10"
dirs = "6.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
ureq = { version = "3.2", features = ["json"] }
flate2 = "1.1"
tar = "0.4"
zip = { version = "7.4", default-features = false, features = ["deflate"] }
rand_chacha = "0.10"

[dev-dependencies]

# rand_chacha moved to [dependencies] for the simulator binary

[lints.rust]
unused_imports = "deny"

[profile.test.package."*"]
opt-level = 2
